--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -1,5 +1,4 @@
-@import "layout/preview";
-@import "layout/forms";
+@import '../../stylesheets/core/variables';
 
 .main {
   @media all and (min-width: 768px) {
