--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,6 +1,5 @@
-@import "core/variables";
-@import "core/reset";
-@import "components/colours";
-@import "components/image-components";
-@import "pages/home";
-@import "pages/index";
+@import 'core/variables';
+@import 'core/reset';
+@import 'components/colours';
+@import 'components/image-components';
+@import 'pages/index';
