--- a/version-0/src/html/partials/image-components.html
+++ b/version-0/src/html/partials/image-components.html
@@ -1,8 +1,5 @@
 <div class="action">
-  <button
-    class="action__upload-btn js__profile-trigger"
-    type="button"
-  >
+  <button class="action__upload-btn js__profile-trigger" type="button">
     Añadir imagen
   </button>
   <input
@@ -12,14 +9,6 @@
     class="action__hiddenField js__profile-upload-btn"
   />
   <div class="profile">
-    <!-- <div
-      class="profile__image js__profile-image"
-      style="
-        background-image: url(https://via.placeholder.com/300x300/cccccc/666666/?text=IMAGE);
-      "
-    ></div> -->
-    <div
-      class="profile__preview js__profile-preview"
-    ></div>
+    <div class="profile__preview js__profile-preview"></div>
   </div>
 </div>
