--- a/src/components/main/forms/Forms.scss
+++ b/src/components/main/forms/Forms.scss
@@ -80,11 +80,11 @@
     margin-bottom: 30px;
     margin-top: 20px;
   }
-
-  //   .collapsed {
-  //     display: none;
-  //   }
+  .collapsed {
+    display: none;
+  }
 }
+
 /**** Estilos aplicados en sección DISEÑA ****/
 
 .colours {
