--- a/src/components/main/preview/Preview.scss
+++ b/src/components/main/preview/Preview.scss
@@ -1,4 +1,4 @@
-@import '../../../stylesheets/core/variables';
+@import "../../../stylesheets/core/variables";
 
 .preview {
   width: 100vw;
@@ -67,13 +67,13 @@
       display: flex;
       flex-direction: column;
     }
-    .stick-border-cold {
+    .stick-border-1 {
       border-left: 5px solid $color-cold-two;
     }
-    .stick-border-warm {
+    .stick-border-2 {
       border-left: 5px solid $color-warm-two;
     }
-    .stick-border-mild {
+    .stick-border-3 {
       border-left: 5px solid $color-mild-two;
     }
     &--name {
@@ -82,13 +82,13 @@
       font-size: 18px;
       font-weight: 800;
     }
-    .name-cold {
+    .name-1 {
       color: $color-cold-one;
     }
-    .name-warm {
+    .name-2 {
       color: $color-warm-one;
     }
-    .name-mild {
+    .name-3 {
       color: $color-mild-one;
     }
 
@@ -117,15 +117,15 @@
       align-items: center;
       text-decoration: none;
     }
-    .icon-cold {
+    .icon-1 {
       border: 2px solid $color-cold-three;
       color: $color-cold-one;
     }
-    .icon-warm {
+    .icon-2 {
       border: 2px solid $color-warm-three;
       color: $color-warm-one;
     }
-    .icon-mild {
+    .icon-3 {
       border: 2px solid $color-mild-three;
       color: $color-mild-one;
     }
